Add Lua base performance test
Signed-off-by: binarylogic <bjohnson@binarylogic.com>

--- a/ansible/roles/http_test_server/templates/http_test_server.service
+++ b/ansible/roles/http_test_server/templates/http_test_server.service
@@ -6,7 +6,7 @@ Requires=network-online.target
 [Service]
 User=http_test_server
 Group=http_test_server
-ExecStart=/usr/local/bin/http_test_server -a {{ server_address }}
+ExecStart=/usr/local/bin/http_test_server -a {{ address }}
 Restart=no
 StandardOutput=syslog
 StandardError=syslog
