--- a/ansible/roles/test_servers/tasks/configure.yml
+++ b/ansible/roles/test_servers/tasks/configure.yml
@@ -3,10 +3,10 @@
     name: http_test_server
   vars:
     action: configure
-    server_address: "{{ http_server_address }}"
+    address: "{{ http_address }}"
 
 - include_role:
     name: tcp_test_server
   vars:
     action: configure
-    server_address: "{{ tcp_server_address }}"
+    address: "{{ tcp_address }}"
