--- a/cases/lua_base_performance/ansible/bootstrap.yml
+++ b/cases/lua_base_performance/ansible/bootstrap.yml
@@ -18,35 +18,14 @@
       action: create_test_file
       location: "{{ test_file }}"
       bytes: 104857600
-      format: text
+      format: json
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
+  strategy: free
   roles:
-    # - role: fluentbit
-    #   action: configure
-    #   configuration_files:
-    #     - config_files/td-agent-bit.conf
-    #     - config_files/td-agent-bit.parsers.conf
-
-    # - role: fluentd
-    #   action: configure
-
-    # - role: logstash
-    #   action: configure
-    #   version: "{{ logstash_version }}"
-
-    # - role: splunk_heavy_forwarder
-    #   action: configure
-    #   configuration_files:
-    #     - src: config_files/splunk.inputs.conf
-    #       dest: inputs.conf
-    #     - src: config_files/splunk.outputs.conf
-    #       dest: outputs.conf
-    #     - src: config_files/splunk.props.conf
-    #       dest: props.conf
-    #     - src: config_files/splunk.transforms.conf
-    #       dest: transforms.conf
+    - role: profiling
+      action: install
 
     - role: vector
       action: install
