--- a/cases/lua_base_performance/ansible/run.yml
+++ b/cases/lua_base_performance/ansible/run.yml
@@ -10,8 +10,7 @@
 - hosts: '{{ test_namespace }}:&tag_TestRole_consumer'
   become: true
   tasks:
-    - name: Start consumer TCP server
-      include_role:
+    - include_role:
         name: tcp_test_server
       vars:
         action: start_and_wait
@@ -29,23 +28,20 @@
 - hosts: '{{ test_namespace }}:&tag_TestRole_producer'
   become: true
   tasks:
-    - name: Wait for port {{ subject_port }} to become available
+    - name: Wait for port {{ subject_instance.ec2_private_ip_address }}:{{ subject_port }} to become available
       wait_for:
         host: "{{ subject_instance.ec2_private_ip_address }}"
         port: "{{ subject_port }}"
         delay: 1
 
     - name: Warmup {{ test_subject }}
-      shell: |
-        timeout 10 bash -c "
-          while true
-          do
-            cat /tmp/flog-100MiB.log | \
-            socat -u - tcp:{{ hostvars[groups.tag_TestRole_subject.0].ec2_private_ip_address }}:{{ subject_port }};
-          done
-        "
-      register: timeout
-      failed_when: timeout.rc != 124
+      include_role:
+        name: socat
+      vars:
+        action: send
+        address: "tcp:{{ subject_instance.ec2_private_ip_address }}:{{ subject_port }}"
+        file: "{{ test_file }}"
+        timeout: 10
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
@@ -60,16 +56,13 @@
   become: true
   tasks:
     - name: Pipe test data to {{ test_subject }}
-      shell: |
-        timeout 60 bash -c "
-          while true
-          do
-            cat /tmp/flog-100MiB.log | \
-            socat -u - tcp:{{ hostvars[groups.tag_TestRole_subject.0].ec2_private_ip_address }}:{{ subject_port }};
-          done
-        "
-      register: timeout
-      failed_when: timeout.rc != 124
+      include_role:
+        name: socat
+      vars:
+        action: send
+        address: "tcp:{{ subject_instance.ec2_private_ip_address }}:{{ subject_port }}"
+        file: "{{ test_file }}"
+        timeout: 60
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
@@ -89,8 +82,8 @@
 - hosts: '{{ test_namespace }}:&tag_TestRole_consumer'
   become: true
   tasks:
-    - name: Stop consumer TCP server
+    - name: Stop {{ consumer_role }}
       include_role:
-        name: tcp_test_server
+        name: "{{ consumer_role }}"
       vars:
         action: stop
