--- a/cases/tcp_to_blackhole_performance/ansible/bootstrap.yml
+++ b/cases/tcp_to_blackhole_performance/ansible/bootstrap.yml
@@ -7,17 +7,12 @@
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_producer'
   become: true
-  tasks:
-    - name: Remove previous test log file
-      file:
-        path: /tmp/flog-100MiB.log
-        state: absent
-
-    - name: Create 100MiB test log file
-      shell: |
-        flog --format apache_common --bytes 104857600 | \
-          jq -c --raw-input '{msg: .}' \
-          > /tmp/flog-100MiB.log
+  roles:
+    - role: flog
+      action: create_test_file
+      location: "{{ test_file }}"
+      bytes: 104857600
+      format: json
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
