--- a/cases/tcp_to_tcp_performance/ansible/run.yml
+++ b/cases/tcp_to_tcp_performance/ansible/run.yml
@@ -14,12 +14,8 @@
     - include_role:
         name: "{{ consumer_role }}"
       vars:
-        action: start
-
-    - name: Wait for port {{ consumer_port }} to become available
-      wait_for:
+        action: start_and_wait
         port: "{{ consumer_port }}"
-        delay: 1
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
