--- a/cases/wrapped_json_correctness/ansible/bootstrap.yml
+++ b/cases/wrapped_json_correctness/ansible/bootstrap.yml
@@ -12,8 +12,8 @@
     # is usefule for subjects that do not include simpler output means.
     - role: test_servers
       action: configure
-      http_server_address: "127.0.0.1:{{ http_consumer_port }}"
-      tcp_server_address: "127.0.0.1:{{ tcp_consumer_port }}"
+      http_address: "127.0.0.1:{{ http_consumer_port }}"
+      tcp_address: "127.0.0.1:{{ tcp_consumer_port }}"
 
     - role: filebeat
       action: configure
