Cleanup Athena query execution
Signed-off-by: binarylogic <bjohnson@binarylogic.com>

--- a/ansible/roles/socat/tasks/send.yml
+++ b/ansible/roles/socat/tasks/send.yml
@@ -1,5 +1,5 @@
 ---
-- name: "Sending data to {{ ip_address }}:{{ port }} for {{ timeout }} seconds"
+- name: "Sending data to {{ address }} for {{ timeout }} seconds"
   shell: |
     timeout {{ timeout }} bash -c "
       while true
