--- a/cases/tcp_to_tcp_performance/ansible/bootstrap.yml
+++ b/cases/tcp_to_tcp_performance/ansible/bootstrap.yml
@@ -18,7 +18,7 @@
       action: create_test_file
       location: "{{ test_file }}"
       bytes: 104857600
-      format: json
+      encoding: json
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
