--- a/cases/real_world_1_performance/ansible/bootstrap.yml
+++ b/cases/real_world_1_performance/ansible/bootstrap.yml
@@ -13,48 +13,48 @@
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_producer[0]'
   become: true
-  tasks:
-    - name: Create API logs
-      shell: |
-        for i in $(seq 1 {{ lines_per_consumer }}); do
-          echo "<118>3 2020-03-13T20:45:38.119Z my.host.com company-api 2004 ID960 - {"key": "val"}
-        done
+  roles:
+    - role: head
+      action: create_test_file
+      location: "{{ test_file }}"
+      line_count: "{{ lines_per_consumer }}"
+      line: '<118>3 2020-03-13T20:45:38.119Z my.host.com company-api 2004 ID960 - {"metadata": {"trace_id": "trace123", "guide_id": "guild123", "channel_id": "channel123", "method": "method"}}'
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_producer[1]'
   become: true
-  tasks:
-    - name: Create Admin logs
-      shell: |
-        for i in $(seq 1 {{ lines_per_consumer }}); do
-          echo "<118>3 2020-03-13T20:45:38.119Z my.host.com company-admin 2004 ID960 - {"key": "val"}
-        done
+  roles:
+    - role: head
+      action: create_test_file
+      location: "{{ test_file }}"
+      line_count: "{{ lines_per_consumer }}"
+      line: '<118>3 2020-03-13T20:45:38.119Z my.host.com company-admin 2004 ID960 - {"metadata": {"trace_id": "trace123", "guide_id": "guild123", "channel_id": "channel123", "method": "method"}}'
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_producer[2]'
   become: true
-  tasks:
-    - name: Create Media Proxy logs
-      shell: |
-        for i in $(seq 1 {{ lines_per_consumer }}); do
-          echo "<118>3 2020-03-13T20:45:38.119Z my.host.com company-media-proxy 2004 ID960 - {"key": "val"}
-        done
+  roles:
+    - role: head
+      action: create_test_file
+      location: "{{ test_file }}"
+      line_count: "{{ lines_per_consumer }}"
+      line: '<118>3 2020-03-13T20:45:38.119Z my.host.com company-media-proxy 2004 ID960 - {"ts": "2020-03-13T20:45:38.119Z"}'
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_producer[3]'
   become: true
-  tasks:
-    - name: Create Unfurler logs
-      shell: |
-        for i in $(seq 1 {{ lines_per_consumer }}); do
-          echo "<118>3 2020-03-13T20:45:38.119Z my.host.com company-unfurler 2004 ID960 - {"key": "val"}
-        done
+  roles:
+    - role: head
+      action: create_test_file
+      location: "{{ test_file }}"
+      line_count: "{{ lines_per_consumer }}"
+      line: '<118>3 2020-03-13T20:45:38.119Z my.host.com company-unfurler 2004 ID960 - {"ts": "2020-03-13T20:45:38.119Z", "msg": "unfurl"}'
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_producer[4]'
   become: true
-  tasks:
-    - name: Create audit logs
-      shell: |
-        for i in $(seq 1 {{ lines_per_consumer }}); do
-          echo "<118>3 2020-03-13T20:45:38.119Z my.host.com audit 2004 ID960 - not JSON
-        done
+  roles:
+    - role: head
+      action: create_test_file
+      location: "{{ test_file }}"
+      line_count: "{{ lines_per_consumer }}"
+      line: '<118>3 2020-03-13T20:45:38.119Z my.host.com audit 2004 ID960 - This is an audit log'
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
