--- a/cases/real_world_1_performance/configurations/default/ansible.yml
+++ b/cases/real_world_1_performance/configurations/default/ansible.yml
@@ -7,4 +7,4 @@
 lines_per_consumer: 10000000 # 10mil
 subject_port: 9000
 consumer_port: 9000
-test_file: "/tmp/flog-100MiB.log"
+test_file: "/tmp/fake.log"
