--- a/cases/real_world_1_performance/ansible/run.yml
+++ b/cases/real_world_1_performance/ansible/run.yml
@@ -25,23 +25,23 @@
       vars:
         action: start
 
-- hosts: '{{ test_namespace }}:&tag_TestRole_producer'
-  become: true
-  tasks:
-    - name: Wait for port {{ subject_instance.ec2_private_ip_address }}:{{ subject_port }} to become available
-      wait_for:
-        host: "{{ subject_instance.ec2_private_ip_address }}"
-        port: "{{ subject_port }}"
-        delay: 1
+# - hosts: '{{ test_namespace }}:&tag_TestRole_producer'
+#   become: true
+#   tasks:
+#     - name: Wait for port {{ subject_instance.ec2_private_ip_address }}:{{ subject_port }} to become available
+#       wait_for:
+#         host: "{{ subject_instance.ec2_private_ip_address }}"
+#         port: "{{ subject_port }}"
+#         delay: 1
 
-    - name: Warmup {{ test_subject }}
-      include_role:
-        name: socat
-      vars:
-        action: send
-        address: "tcp:{{ subject_instance.ec2_private_ip_address }}:{{ subject_port }}"
-        file: "{{ test_file }}"
-        timeout: 10
+#     - name: Warmup {{ test_subject }}
+#       include_role:
+#         name: socat
+#       vars:
+#         action: send
+#         address: "tcp:{{ subject_instance.ec2_private_ip_address }}:{{ subject_port }}"
+#         file: "{{ test_file }}"
+#         timeout: 10
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
