--- a/cases/real_world_1_performance/configurations/one_sink/ansible.yml
+++ b/cases/real_world_1_performance/configurations/one_sink/ansible.yml
@@ -8,4 +8,4 @@ lines_per_consumer: 10000000 # 10mil
 subject_port: 9000
 consumer_port: 9000
 test_file: "/tmp/fake.log"
-vector_config_file: "vector.toml"
+vector_config_file: "vector.one_sink.toml"
