--- a/ansible/roles/profiling/tasks/start.yml
+++ b/ansible/roles/profiling/tasks/start.yml
@@ -1,4 +1,13 @@
 ---
+- name: Capture dstat version
+  command: "dstat --version"
+  register: dstat_version
+
+- name: Fail if dstat is not the correct version
+  fail:
+    msg: "Only dstat version 0.7.2 is allowed, you have version {{ dstat_version }} installed"
+  when: dstat_version != "0.7.2"
+
 - name: Remove previous /tmp/dstat.csv
   file:
     path: /tmp/dstat.csv
