Use correct version
Signed-off-by: binarylogic <bjohnson@binarylogic.com>

--- a/ansible/roles/profiling/tasks/start.yml
+++ b/ansible/roles/profiling/tasks/start.yml
@@ -1,12 +1,12 @@
 ---
 - name: Capture dstat version
-  command: "dstat --version"
+  command: "dstat --version | head -n 1"
   register: dstat_version
 
 - name: Fail if dstat is not the correct version
   fail:
-    msg: "Only dstat version 0.7.2 is allowed, you have version {{ dstat_version }} installed"
-  when: dstat_version != "0.7.2"
+    msg: "Only Dstat 0.7.2 is allowed, you have {{ dstat_version }} installed"
+  when: dstat_version != "Dstat 0.7.2"
 
 - name: Remove previous /tmp/dstat.csv
   file:
