Disable services and timers at ansible/roles/no_auto_update/tasks/main.yml

--- a/ansible/roles/no_auto_update/tasks/main.yml
+++ b/ansible/roles/no_auto_update/tasks/main.yml
@@ -4,6 +4,8 @@
     state: stopped
     name: "{{ item }}"
   with_items:
-    - 'unattended-upgrades'
-    - 'apt-daily'
-    - 'apt-daily-upgrade'
+    - 'unattended-upgrades.service'
+    - 'apt-daily.service'
+    - 'apt-daily.timer'
+    - 'apt-daily-upgrade.service'
+    - 'apt-daily-upgrade.timer'
