Bake socat_loop into the AMI

--- a/ansible/ami.yml
+++ b/ansible/ami.yml
@@ -9,6 +9,9 @@
     - journald-rate-limits
     - flog
 
+    - role: socat_loop
+      action: install
+
     - role: file_test_server
       action: install
 
