Fix flog role to match the expected patterns at call-locations

--- a/ansible/ami.yml
+++ b/ansible/ami.yml
@@ -7,7 +7,9 @@
     - python3
     - awscli
     - journald-rate-limits
-    - flog
+
+    - role: flog
+      action: install
 
     - role: socat_loop
       action: install
