Switch ansible/roles/socat/tasks/send.yml to command with explicit argv

--- a/ansible/roles/socat/tasks/send.yml
+++ b/ansible/roles/socat/tasks/send.yml
@@ -1,6 +1,13 @@
 ---
 - name: "Sending data to {{ address }} for {{ timeout }} seconds"
-  shell: |
-    socat_loop "{{ timeout }}" "{{ file }}" -u - "{{ address }}"
+  command:
+    argv: [
+      "socat_loop",
+      timeout,
+      file,
+      "-u",
+      "-",
+      address
+    ]
   register: socat_loop
   failed_when: socat_loop.rc != 124
