--- a/ansible/roles/vector/tasks/configure.yml
+++ b/ansible/roles/vector/tasks/configure.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Vector configuration
-  template:
+  copy:
     src: "{{ configuration_file }}"
     dest: /etc/vector/vector.toml
     mode: 0644
