Parameterize socat_loop call, closes #48
Signed-off-by: binarylogic <bjohnson@binarylogic.com>

--- a/ansible/roles/socat/tasks/send.yml
+++ b/ansible/roles/socat/tasks/send.yml
@@ -3,11 +3,11 @@
   command:
     argv: [
       "socat_loop",
-      timeout,
-      file,
+      "{{ timeout }}",
+      "{{ file }}",
       "-u",
       "-",
-      address
+      "{{ address }}"
     ]
   register: socat_loop
   failed_when: socat_loop.rc != 124
