--- a/cases/real_world_1_performance/ansible/bootstrap.yml
+++ b/cases/real_world_1_performance/ansible/bootstrap.yml
@@ -11,7 +11,7 @@
     - set_fact:
         consumer_instance: "{{ hostvars[groups['tag_Name_vector_test_' + user_id + '_' + test_name + '_' + test_configuration + '_consumer'].0] }}"
 
-- hosts: '{{ test_namespace }}:&tag_TestRole_producer[0]'
+- hosts: '{{ test_namespace }}:&tag_TestRole_producer:&tag_TestIndex_0'
   become: true
   roles:
     - role: head
@@ -20,7 +20,7 @@
       line_count: "{{ lines_per_consumer }}"
       line: '<118>3 2020-03-13T20:45:38.119Z my.host.com company-api 2004 ID960 - {"metadata": {"trace_id": "trace123", "guide_id": "guild123", "channel_id": "channel123", "method": "method"}}'
 
-- hosts: '{{ test_namespace }}:&tag_TestRole_producer[1]'
+- hosts: '{{ test_namespace }}:&tag_TestRole_producer:&tag_TestIndex_1'
   become: true
   roles:
     - role: head
@@ -29,7 +29,7 @@
       line_count: "{{ lines_per_consumer }}"
       line: '<118>3 2020-03-13T20:45:38.119Z my.host.com company-admin 2004 ID960 - {"metadata": {"trace_id": "trace123", "guide_id": "guild123", "channel_id": "channel123", "method": "method"}}'
 
-- hosts: '{{ test_namespace }}:&tag_TestRole_producer[2]'
+- hosts: '{{ test_namespace }}:&tag_TestRole_producer:&tag_TestIndex_2'
   become: true
   roles:
     - role: head
@@ -38,7 +38,7 @@
       line_count: "{{ lines_per_consumer }}"
       line: '<118>3 2020-03-13T20:45:38.119Z my.host.com company-media-proxy 2004 ID960 - {"ts": "2020-03-13T20:45:38.119Z"}'
 
-- hosts: '{{ test_namespace }}:&tag_TestRole_producer[3]'
+- hosts: '{{ test_namespace }}:&tag_TestRole_producer:&tag_TestIndex_3'
   become: true
   roles:
     - role: head
@@ -47,7 +47,7 @@
       line_count: "{{ lines_per_consumer }}"
       line: '<118>3 2020-03-13T20:45:38.119Z my.host.com company-unfurler 2004 ID960 - {"ts": "2020-03-13T20:45:38.119Z", "msg": "unfurl"}'
 
-- hosts: '{{ test_namespace }}:&tag_TestRole_producer[4]'
+- hosts: '{{ test_namespace }}:&tag_TestRole_producer:&tag_TestIndex_4'
   become: true
   roles:
     - role: head
