tcp_bi_topology has been split to tcp_bi_send and tcp_bi_receive based on the perspective of the subject instance
Signed-off-by: binarylogic <bjohnson@binarylogic.com>

--- a/cases/tcp_to_blackhole_performance/ansible/bootstrap.yml
+++ b/cases/tcp_to_blackhole_performance/ansible/bootstrap.yml
@@ -27,7 +27,8 @@
       action: configure
 
     - role: vector
-      action: install
+      action: install_archive_from_url
 
     - role: vector
       action: configure
+      configuration_file: config_files/vector.old.toml
