--- a/ansible/roles/vector/tasks/install.yml
+++ b/ansible/roles/vector/tasks/install.yml
@@ -11,7 +11,7 @@
       when: vector_version is not regex('^dev-')
       include: "install_deb_from_url.yml"
       vars:
-        deb: https://packages.timber.io/vector/{{ vector_version }}/vector-amd64.deb
+        deb: https://packages.timber.io/vector/{{ vector_version }}/vector-{{ vector_version }}-amd64.deb
 
     - name: Install Vector .deb package from local file
       when: vector_version is regex('^dev-')
