--- a/cases/tcp_to_http_performance/configurations/high_concurrency/ansible.yml
+++ b/cases/tcp_to_http_performance/configurations/high_concurrency/ansible.yml
@@ -3,7 +3,8 @@
 # Do not modify the parameters of this file since historical test results are
 # based on these parameters. Please create a new configuration and specify taht
 # configuration instead.
-producer_instance_type  = "c5.large"
-producer_instance_count = 10
-subject_instance_type   = "c5.large"
-subject_port            = 9000
+---
+bytes_per_consumer: 104857600 # 100MiB
+subject_port: 9000
+consumer_port: 9000
+test_file: "/tmp/flog-100MiB.log"
