--- a/cases/real_world_1_performance/configurations/without_transforms/ansible.yml
+++ b/cases/real_world_1_performance/configurations/without_transforms/ansible.yml
@@ -5,7 +5,11 @@
 # configuration instead.
 ---
 lines_per_consumer: 10000000 # 10mil
-subject_port: 9000
+subject_api_port: 9000
+subject_admin_port: 9000
+subject_media_proxy_port: 9000
+subject_unfurler_port: 9000
+subject_audit_port: 9000
 consumer_port: 9000
 test_file: "/tmp/fake.log"
 vector_config_file: "vector.without_transforms.toml"
